# astrbot_plugin_proactive_chat

./: .gitignore  LICENSE  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
docs/: COMMUNITY_LISTING.md  INSTALL_ASTRBOT.md  MAINTENANCE_0.1.md  RELEASE_0.1.6.md  RELEASE_0.1.7.md  ROADMAP_0.2.md  TASKS.md  VOICE_PROVIDER_BOUNDARY.md
proactive_chat/: async_utils.py  background.py  config.py  delivery.py  events.py  llm.py  management.py  queue_factory.py  rate_limit.py  voice.py  worker.py
scripts/: smoke_check.py
tests/: conftest.py  test_background.py  test_config.py  test_delivery.py  test_events.py  test_management.py  test_plugin_manifest.py  test_public_api.py  test_queue_factory.py  test_rate_limit.py  test_release_readiness.py  test_smoke_script.py  test_voice.py  test_worker.py
