[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrbot-plugin-proactive-chat"
version = "0.1.3"
description = "AIRI-like proactive group chat plugin for AstrBot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aitwo" }]
keywords = ["AstrBot", "proactive chat", "AIRI", "voice", "community plugin"]
dependencies = [
  "astrbot-proactive-core>=0.1.0,<0.2.0",
]

[project.urls]
Repository = "https://github.com/yurisachan16-creator/astrbot_plugin_proactive_chat"
Issues = "https://github.com/yurisachan16-creator/astrbot_plugin_proactive_chat/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.15.13",
]

[tool.hatch.build.targets.wheel]
packages = ["proactive_chat"]
force-include = { "main.py" = "main.py", "metadata.yaml" = "metadata.yaml", "_conf_schema.json" = "_conf_schema.json", "requirements.txt" = "requirements.txt" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
